--- a/template/index.hbs
+++ b/template/index.hbs
@@ -3,15 +3,9 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <title>toth - Style Guide</title>
-    <link rel="stylesheet" href="css/vendor/tomorrow.min.css">
-    <script src="js/vendor/highlight.min.js"></script>
-    <script src="https://cdn.rawgit.com/zenorocha/clipboard.js/v1.5.3/dist/clipboard.min.js"></script>
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/vendor/sanilize.min.css">
-    <link rel="stylesheet" href="css/vendor/typ.min.css">
-    <link rel="stylesheet" href="css/toth.css">
-    <script src="js/toth.js"></script>
+    <link rel="stylesheet" href="toth.min.css">
 
     {{#each this}}
       <link rel="stylesheet" href="{{cssurl}}">
@@ -80,5 +74,6 @@
         {{/each}}
       </section>
     </div>
+    <script src="toth.min.js"></script>
   </body>
 </html>
